unpackaged/main/default/objects/FSL__Overlap_Event__e/FSL__Overlap_Event__e.object-meta.xml
<CustomObject>
    <description>aSD</description>
    <label>Overlap_Event</label>
    <pluralLabel>Overlap_Events</pluralLabel>
</CustomObject>