unpackaged/main/default/objects/FSL__Overlap_Event__e/fields/FSL__Absence_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>FSL__Absence_Type_Name__c</fullName>
    <label>Absence_Type_Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>