unpackaged/main/default/objects/FSL__Overlap_Event__e/fields/FSL__End__c.field-meta.xml
<CustomField>
    <fullName>FSL__End__c</fullName>
    <label>End</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>