unpackaged/main/default/objects/FSL__Overlap_Event__e/fields/FSL__Event_Type__c.field-meta.xml
<CustomField>
    <fullName>FSL__Event_Type__c</fullName>
    <label>Event_Type</label>
    <length>64</length>
    <required>true</required>
    <type>Text</type>
</CustomField>