unpackaged/main/default/objects/FSL__Overlap_Event__e/fields/FSL__Overlap_Length_in_Minutes__c.field-meta.xml
<CustomField>
    <fullName>FSL__Overlap_Length_in_Minutes__c</fullName>
    <label>Overlap_Length_ in_ Minutes</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>