unpackaged/main/default/objects/FSL__Overlap_Event__e/fields/FSL__Record_ID__c.field-meta.xml
<CustomField>
    <fullName>FSL__Record_ID__c</fullName>
    <label>Record_ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>