unpackaged/main/default/objects/FSL__Overlap_Event__e/fields/FSL__Resource_ID__c.field-meta.xml
<CustomField>
    <fullName>FSL__Resource_ID__c</fullName>
    <label>Resource_ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>