unpackaged/main/default/objects/FSL__Overlap_Event__e/fields/FSL__Start__c.field-meta.xml
<CustomField>
    <fullName>FSL__Start__c</fullName>
    <label>Start</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>