unpackaged/main/default/objects/FSL__Overlap_Event__e/fields/FSL__Subject__c.field-meta.xml
<CustomField>
    <fullName>FSL__Subject__c</fullName>
    <label>Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>