unpackaged/main/default/objects/FSL__Overlap_Event__e/fields/FSL__Territory_ID__c.field-meta.xml
<CustomField>
    <fullName>FSL__Territory_ID__c</fullName>
    <label>Territory_ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>