unpackaged/main/default/objects/FSL__Overlap_Event__e/fields/FSL__Work_Type_ID__c.field-meta.xml
<CustomField>
    <fullName>FSL__Work_Type_ID__c</fullName>
    <label>Work_Type_ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>